test/files/pos/t9034.scala
object Test {
  abstract class Foo {
    protected val foo: Boolean
  }

  def foo[@specialized T](t: T) = new Foo {
    protected val foo: Boolean = true
  }
}
